devops/kube/base/asset-service.yml
apiVersion: v1
kind: Service
metadata:
  name: asset-container-service
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: asset-container
