devops/kube/base/feed-service.yml
apiVersion: v1
kind: Service
metadata:
  name: feed-container-service
spec:
  ports:
  - name: "7720"
    port: 7720
    targetPort: 7720
  selector:
    app: feed-service
