devops/kube/base/front-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front
  name: front-container-service
spec:
  ports:
  - name: "7730"
    port: 7730
    targetPort: 7730
  selector:
    app: front-container
