devops/kube/base/quotes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quotes-container-service
spec:
  ports:
  - name: "7710"
    port: 7710
    targetPort: 7710
  selector:
    app: quotes-service
